--- a/Sobenz.Authorization/appsettings.json
+++ b/Sobenz.Authorization/appsettings.json
@@ -6,5 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "TokenSettings": {
+    "TokenIssuer": "https://sobenz.com",
+    "UserAccessTokenLifetime": "00:05:00",
+    "ApplicationAccessTokenLifetime": "01:00:00",
+    "IdentityTokenLifetime": "1.00:00:00",
+    "RefreshTokenLifetime": "30.00:00:00",
+    "ConsumerAccessTokenAudience": "https://api.sobenz.com/consumer",
+    "MerchantAccessTokenAudience": "https://api.sobenz.com/merchant"
+  },
+  "PersistedTokenSettings": {
+    "AuthorizationCodeLifetime": "00:01:00",
+    "RefreshTokenLifetime": "30.00:00:00",
+    "UserSessionLifetime": "00:20:00"
+  },
   "AllowedHosts": "*"
 }
